--- a/doc/第二部分 第2章 整型对象.md
+++ b/doc/第二部分 第2章 整型对象.md
@@ -150,7 +150,7 @@ ob_size代表了item的个数，还不能确切表示内存的大小。从前文
 整型对象是程序中最常用对象之一。对于Python来说，对象的创建与销毁均需要在堆上进行申请与释放。所以这必然会导致效率的低下。而且也会导致内存产生大量的碎片。
 另一个解决问题的极端方法是，所以整数对象一次申请，并不释放。虽然很大程度上提高了效率，但是内存利用率是无法忍受的。因此Gui叔把整数分为两部分，小整数和普通整数。
 * 对于小整数来说，一次申请，但不释放
-* 对于普通整数则一次申请，一次“释放”（这里并不是真正的释放内存！）
+* 对于普通整数来说，一次申请，当引用计数器为0时，释放内存。(与Python 2.5相比，此处有变化)
 
 # 走进大师
 分析 一下 大数相乘 代码，并分析其算法复杂度。
